# G_engine

./: .gitignore  .gitmodules  CMakeLists.txt  G_engine.sh
include/Application/: Application.h
include/Render/: IRender.h  OpenGLRenderer.h
include/Render/OpenGL/: OpenGLRenderer.h
include/Render/OpenGL/Buffers/: IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/Render/OpenGL/Shaders/: Shader.h
include/Render/OpenGL/Textures/: Texture.h
res/shader/: basic.shader
src/: CMakeLists.txt  main.cpp
src/Render/: CMakeLists.txt  OpenGLRenderer.cpp
src/Render/OpenGL/: CMakeLists.txt  OpenGLRenderer.cpp
src/Render/OpenGL/Buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/Render/OpenGL/Shaders/: Shader.cpp
src/Render/OpenGL/Textures/: Texture.cpp
src/Test/: CMakeLists.txt  adder.cpp
